added edit, show links

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -2,3 +2,7 @@
 
 <p>Title: <%= @article.title%></p>
 <p>Description: <%= @article.description%></p>
+
+<p><%= link_to "Update this article", edit_article_path(@article)%></p>
+
+<%= link_to "Back to article listing", articles_path %>
