--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,8 +1,8 @@
+<%= render 'pages/nav' %>
+
 <h1>Listing all articles</h1>
 
-<p>
-    <%= link_to "Create new article", new_article_path %>
-</p>
+<p><%= link_to "Create new article", new_article_path %></p>
 
 <table>
   <tr>
@@ -15,6 +15,10 @@
     <td><%= article.description %></td>
     <td><%= link_to "Edit", edit_article_path(article) %></td>
     <td><%= link_to "Show", article_path(article) %></td>
+    <td>
+      <%= link_to "Delete", article_path(article), method: :delete, data:
+      {confirm: "Are you sure?"}%>
+    </td>
   </tr>
   <% end %>
 </table>
