--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,16 +1,4 @@
-<nav
-  style="
-    background-color: aqua;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    flex-direction: row;
-    padding-left: 8px;
-  ">
-  <%= link_to 'Home', root_path %>
-  <span style="margin-left: 5px"
-    ><%= link_to 'About', about_path %>
-  </span>
-</nav>
+<%= render 'nav' %>
 <section>
   <h1>This is the home page</h1>
 </section>
