--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,24 +1,37 @@
-<%= render 'pages/nav' %>
+<div class="container">
+  <div class="d-flex justify-content-between align-items-center mt-4">
+    <h6>All articles</h6>
+    <%= link_to "Create new article", new_article_path, class: 'btn btn-success
+    btn-sm text-white' %>
+  </div>
 
-<h1>Listing all articles</h1>
+  <table class="table table-stripped table-bordered mt-4 table-sm">
+    <thead class="table-light">
+      <tr>
+        <th>Title</th>
+        <th>Description</th>
+        <th colspan="3">Actions</th>
+      </tr>
+    </thead>
 
-<p><%= link_to "Create new article", new_article_path %></p>
-
-<table>
-  <tr>
-    <th>Title</th>
-    <th>Description</th>
-  </tr>
-  <% @articles.each do |article| %>
-  <tr>
-    <td><%= article.title %></td>
-    <td><%= article.description %></td>
-    <td><%= link_to "Edit", edit_article_path(article) %></td>
-    <td><%= link_to "Show", article_path(article) %></td>
-    <td>
-      <%= link_to "Delete", article_path(article), method: :delete, data:
-      {confirm: "Are you sure?"}%>
-    </td>
-  </tr>
-  <% end %>
-</table>
+    <% @articles.each do |article| %>
+    <tr>
+      <td><%= article.title %></td>
+      <td><%= article.description %></td>
+      <td>
+        <%= link_to "Edit", edit_article_path(article), class: 'btn btn-sm
+        btn-info' %>
+      </td>
+      <td>
+        <%= link_to "Show", article_path(article), class: 'btn btn-sm
+        btn-primary' %>
+      </td>
+      <td>
+        <%= link_to 'Delete', article_path(article), method: :delete, data: {
+        confirm: 'Are you sure you want to delete this article?' }, class: 'btn
+        btn-sm btn-danger'%>
+      </td>
+    </tr>
+    <% end %>
+  </table>
+</div>
