--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,14 @@
   </head>
  
   <body>
-   <%= render 'layouts/messages' %>    
-   <%= yield %>
+   <%= render 'layouts/messages' %> 
+  
+   <%= render 'layouts/nav' %>
+    <div class="container">
+      <%= yield %>
+    </div>   
+
+    <%= render 'layouts/footer' %>
+   
   </body>
 </html>
