--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,17 @@
-<%= render 'nav' %>
-<section>
-  <h1>This is the home page</h1>
+<section class="mt-3 container">
+  <div class="p-5 mb-4 bg-light rounded-3 jumbotron">
+    <div
+      class="
+        container-fluid
+        py-5
+        d-flex
+        flex-column
+        align-items-center
+        jusify-content-center
+      "
+    >
+      <h1 class="display-5 fw-bold text-white">ALPHA BLOG</h1>
+      <%= link_to 'Sign up now', '#', class: 'btn btn-success btn-lg mt-4' %>
+    </div>
+  </div>
 </section>
