--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,15 +1,21 @@
-
 <% if @article.errors.any? %>
-<h2>The following errors prevented the article from getting created</h2>
+<h6>The following errors prevented the article from getting created</h6>
 <ul>
   <% @article.errors.full_messages.each do |msg| %>
   <li><%= msg %></li>
   <% end %>
 </ul>
 <% end %> <%= form_for @article do |f| %>
-<p><%= f.label :title%> <%= f.text_field :title %></p>
-<p><%= f.label :description%> <%= f.text_area :description %></p>
-<p><%= f.submit %></p>
-<% end %>
+<div class="col-md-4">
+  <p>
+  <%= f.label :title, class: 'form-label' %> <%= f.text_field :title, class:
+  'form-control' %>
+</p>
+<p>
+  <%= f.label :description, class: 'form-label'%> <%= f.text_area :description,
+  class: 'form-control' %>
+</p>
+<p><%= f.submit class: 'btn btn-success' %></p>
+<% end %> <%= link_to "Back to article listing", articles_path %>
+</div>
 
-<%= link_to "Back to article listing", articles_path %>
