--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,9 +1,32 @@
+<%= notice %>
+<div
+  class="
+    card
+    bg-light
+    shadow
+    col-md-6
+    p-3
+    d-flex
+    justify-content-center
+    align-items-center
+    flex-column
+    mt-5
+  "
+>
+  <h6>Selected article</h6>
+  <div class="">
+    <p>
+      <strong>Title:</strong>
+      <%= @article.title %>
+    </p>
 
-<h1>Showing selected article</h1>
-
-<p>Title: <%= @article.title%></p>
-<p>Description: <%= @article.description%></p>
-
-<p><%= link_to "Update this article", edit_article_path(@article)%></p>
-
-<%= link_to "Back to article listing", articles_path %>
+    <p>
+      <strong>Description:</strong>
+      <%= @article.description %>
+    </p>
+    <div class="d-flex justify-content-between align-items-between col-md-5">
+      <%= link_to 'Edit', edit_article_path(@article), class: 'btn btn-sm
+      btn-info' %> | <%= link_to 'Back', articles_path, class: 'btn btn-sm btn-success' %>
+    </div>
+  </div>
+</div>
